sfSandBoxCode/force-app/main/default/objects/Recruitment_Request_Config__c/Recruitment_Request_Config__c.object-meta.xml
<CustomObject>
    <label>Recruitment Request Config</label>
    <nameField>
        <displayFormat>RRC-{0000000000}</displayFormat>
        <label>Recruitment Request Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruitment Request Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>