sfSandBoxCode/force-app/main/default/objects/Recruitment_Request_Config__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To:</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Recruitment Request Config</relationshipLabel>
    <relationshipName>Recruitment_Request_Config</relationshipName>
    <type>Lookup</type>
</CustomField>