sfSandBoxCode/force-app/main/default/objects/Recruitment_Request_Config__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>