sfSandBoxCode/force-app/main/default/objects/Recruitment_Request_Config__c/fields/Maximum__c.field-meta.xml
<CustomField>
    <fullName>Maximum__c</fullName>
    <label>Maximum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>