sfSandBoxCode/force-app/main/default/objects/Recruitment_Request_Config__c/fields/Returnable__c.field-meta.xml
<CustomField>
    <fullName>Returnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returnable</label>
    <type>Checkbox</type>
</CustomField>