sfSandBoxCode/force-app/main/default/objects/Recruitment_Request_Config__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Allowance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Email Account</fullName>
            </value>
            <value>
                <fullName>Dropbox Account</fullName>
            </value>
            <value>
                <fullName>Salesforce Account</fullName>
            </value>
            <value>
                <fullName>Intranet Account</fullName>
            </value>
            <value>
                <fullName>Airtime Allowance</fullName>
            </value>
            <value>
                <fullName>Meal Allowance</fullName>
            </value>
            <value>
                <fullName>Transport Allowance</fullName>
            </value>
            <value>
                <fullName>Overtime Allowance</fullName>
            </value>
            <value>
                <fullName>Bonus Allowance</fullName>
            </value>
            <value>
                <fullName>Referral Commission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>