sfSandBoxCode/force-app/main/default/objects/Recruitment_Request_Config__c/recordTypes/Allowance_Benefit.recordType-meta.xml
<RecordType>
    <fullName>Allowance_Benefit</fullName>
    <active>true</active>
    <label>Allowance</label>
</RecordType>