sfSandBoxCode/force-app/main/default/objects/Recruitment_Request_Config__c/listViews/HR_Admin_Recruitment_Request_Config.listView-meta.xml
<ListView>
    <fullName>HR_Admin_Recruitment_Request_Config</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Admin</label>
    <queue>HR_Admin</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>